--- a/ElmaTestWork_2/ElmaTestWork_2.csproj
+++ b/ElmaTestWork_2/ElmaTestWork_2.csproj
@@ -52,6 +52,18 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr3.Runtime.3.5.1\lib\net40-client\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Integration.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Mvc5.4.0.2\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Integration.Mvc.Owin, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Mvc5.Owin.4.0.1\lib\net45\Autofac.Integration.Mvc.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Integration.Owin, Version=4.2.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Owin.4.2.0\lib\net45\Autofac.Integration.Owin.dll</HintPath>
+    </Reference>
     <Reference Include="FluentNHibernate, Version=1.4.0.0, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
     </Reference>
@@ -124,9 +136,6 @@
     </Reference>
     <Reference Include="NHibernate, Version=5.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\NHibernate.5.0.0\lib\net461\NHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate.AspNet.Identity, Version=5.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NHibernate.AspNet.Identity.5.0.1\lib\net461\NHibernate.AspNet.Identity.dll</HintPath>
     </Reference>
     <Reference Include="Remotion.Linq, Version=2.1.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
       <HintPath>..\packages\Remotion.Linq.2.1.2\lib\net45\Remotion.Linq.dll</HintPath>
@@ -202,6 +211,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutofacConfiguration.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\DataConfiguration.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -212,6 +222,14 @@
     <Compile Include="Controllers\DocumentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\AuthorityNHibernateProviderFactory.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\AuthorityUnitOfWorkFactory.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\IAuthorityNHibernateProviderFactory.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\IAuthorityUnitOfWorkFactory.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\IStoreNHibernateProviderFactory.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\IStoreUnitOfWorkFactory.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\StoreNHibernateProviderFactory.cs" />
+    <Compile Include="DAL\NHibernate\UnitOfWork\StoreUnitOfWorkFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -392,6 +410,10 @@
     <ProjectReference Include="..\AbstractApplication\AbstractApplication.csproj">
       <Project>{4431E1A7-8192-4467-8C81-42BB81A311E1}</Project>
       <Name>AbstractApplication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NHibernate.AspNet.Identity\NHibernate.AspNet.Identity.csproj">
+      <Project>{C620FAAE-F1B6-479E-9959-C46C20ED0A8A}</Project>
+      <Name>NHibernate.AspNet.Identity</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
