--- a/ElmaTestWork_2/Web.config
+++ b/ElmaTestWork_2/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=|DataDirectory|\NHibernate.AspNet.Web.s3db; Version=3; New=True;" />-->
@@ -19,7 +19,7 @@
   <log4net>
     <appender name="Console" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d{HH:mm:ss.fff} [%t] %p %c - %m%n"/>
+        <conversionPattern value="%d{HH:mm:ss.fff} [%t] %p %c - %m%n" />
       </layout>
     </appender>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -36,7 +36,7 @@
       </layout>
     </appender>
     <root>
-      <appender-ref ref="RollingLogFileAppender"/>
+      <appender-ref ref="RollingLogFileAppender" />
     </root>
   </log4net>
 
@@ -106,7 +106,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.5.0" newVersion="5.2.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.5.0" newVersion="5.2.5.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
@@ -119,6 +119,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Iesi.Collections" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.4000" newVersion="4.0.0.4000" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac.Integration.Owin" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
