--- a/ElmaTestWork_2/packages.config
+++ b/ElmaTestWork_2/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
+  <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net461" />
+  <package id="Autofac.Owin" version="4.2.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net461" />
@@ -52,7 +56,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NHibernate" version="5.0.0" targetFramework="net461" />
-  <package id="NHibernate.AspNet.Identity" version="5.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.2" targetFramework="net461" />
