--- a/NHibernate.AspNet.Identity.Tests/NHibernate.AspNet.Identity.Tests.csproj
+++ b/NHibernate.AspNet.Identity.Tests/NHibernate.AspNet.Identity.Tests.csproj
@@ -109,6 +109,8 @@
   <ItemGroup>
     <Compile Include="Models\Foo.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\UnitOfWorkFactoryFake.cs" />
+    <Compile Include="Models\UnitOfWorkFake.cs" />
     <Compile Include="UserStoreTest.cs" />
     <Compile Include="MapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
