Отладка кода по тестам

--- a/NHibernate.AspNet.Identity.Tests/NHibernate.AspNet.Identity.Tests.csproj
+++ b/NHibernate.AspNet.Identity.Tests/NHibernate.AspNet.Identity.Tests.csproj
@@ -127,7 +127,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="sqlite-nhibernate-config.xml">
+    <Content Include="mssql-nhibernate-config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="app.config" />
