Добавлена валидация формы на стороне клиента.

--- a/ElmaTestWork_2/ElmaTestWork_2.csproj
+++ b/ElmaTestWork_2/ElmaTestWork_2.csproj
@@ -341,6 +341,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Site.js" />
     <Content Include="Scripts\SiteInformationTimer.js" />
+    <Content Include="Scripts\SiteValid.js" />
     <Content Include="Scripts\umd\popper-utils.js" />
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
